cleaned up version

--- a/templates/additionIndex.html.twig
+++ b/templates/additionIndex.html.twig
@@ -7,7 +7,7 @@
     <style>
 
     </style>
-    <script src="../src/AdditionTest.js"></script>
+    <script src="../AdditionTest.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <input type="hidden" name="addNum" value= {{ num }}>
 
                 <!--<a href="../templates/additionTest.html?addNum={{ num }}">+ {{ num }}</a>-->
-                <a href="../templates/additionTest.html" onclick="runAdditionTest({{ num }})">{{ num }}</a>
+                <a href="/js/additionTest.html" onclick="runAdditionTest({{ num }})">{{ num }}</a>
             </form>
 
 
