--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -18,7 +18,7 @@
 <main>
 
     <nav>
-        <a href="../public/index.php?action=additionIndex">Addition</a>
+        <a href="/index.php?action=additionIndex">Addition</a>
         <a href="../public/index.php?action=subtractionIndex">Subtraction</a>
         <a href="../public/index.php?action=shop">Shop</a>
         <a href="../public/index.php?action=clock">Clock</a>
