--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,7 +3,7 @@ nav ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    background-color: gainsboro;
+    background-color: darkolivegreen;
 }
 
 nav ul li  {
