--- a/templates/_base.html.twig
+++ b/templates/_base.html.twig
@@ -10,20 +10,7 @@
 
 <body>
 <header>
-
-    <section class="blockContainer">
-        <nav>
-            <section class="flexContainer">
-                <section class="bigFlex"><section class="headingContainer">
-                    <h1>Bibliography Manager</h1></section></section>
-
-            <section class="smallFlex">
-                <a href="/login">Login</a>
-                <a href="/logout">Logout</a>
-            </section>
-
-        </nav>
-    </section>
+    <h1 class="headingContainer">Bibliography Manager</h1>
 
     <section class="blockContainer">
         <nav>
@@ -38,7 +25,10 @@
                 </li>
                 {% endif %}
                 <li>
-                    <a href="/about">About</a>
+                    <a href="/login">Login</a>
+                </li>
+                <li>
+                    <a href="/logout">Logout</a>
                 </li>
             </ul>
         </nav>
@@ -51,7 +41,6 @@
     <hr>
     <a href="mailto:B00084443@student.itb.ie">Email</a>
     Kevin Drennan B00084443
-    <a href="index.html.twig?action=sitemap">sitemap</a>
     <p>you are logged in as: <strong> {{ collegeId }}</strong></p>
 </footer>
 </body>
