--- a/templates/admin/_adminBase.html.twig
+++ b/templates/admin/_adminBase.html.twig
@@ -11,19 +11,7 @@
 <body>
 <header>
 
-    <section class="blockContainer">
-        <nav>
-            <section class="flexContainer">
-                <section class="bigFlex"><section class="headingContainer">
-                        <h1>Bibliography Manager Administration</h1></section></section>
-
-                <!--<section class="smallFlex">
-                    <a href="/login">Login</a>
-                    <a href="/logout">Logout</a>
-                </section>-->
-
-        </nav>
-    </section>
+    <h1 class="headingContainer">Bibliography Manager Administration</h1>
 
     <section class="blockContainer">
         <nav>
