--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,10 +4,10 @@
 
 {% block main %}
 <main>
-    <h3><a href="/login">Login</a></h3>
     <h3><a href="/proposeTag">Propose a new tag</a></h3>
     <h3><a href="/viewProposedTags">View and vote on proposed tags</a></h3>
     <h3><a href="/proposeRef">Propose a new REF</a></h3>
+    <h3><a href="/viewRefs">View or search Refs</a></h3>
 
 </main>
 
