--- a/templates/proposeRef.html.twig
+++ b/templates/proposeRef.html.twig
@@ -60,7 +60,7 @@
             </section>
         </section>
 
-        <p>Instructions on how refs work</p>
+        <p>Your ref will be forwarded to a moderator for a decision as to its acceptance</p>
         <br>
         <i>{{ message }}</i>
     </main>
