--- a/templates/proposeTag.html.twig
+++ b/templates/proposeTag.html.twig
@@ -24,7 +24,7 @@
 
             <input type="submit" value="submit">
         </form>
-        <p>Instructions on how tags work</p>
+        <p>Your tag will be forwarded for decision and can be publicly voted on by entering the view and vote on tags page</p>
         <br>
         <i>{{ message }}</i>
     </main>
