--- a/templates/studentLecturer/studentLecturerIndex.html.twig
+++ b/templates/studentLecturer/studentLecturerIndex.html.twig
@@ -3,12 +3,12 @@
 
 {% block main %}
     <main>
-        <h3><a href="/login">Login</a></h3>
         <h3><a href="/proposeTag">Propose a new tag</a></h3>
         <h3><a href="/viewProposedTags">View and vote on proposed tags</a></h3>
         <h3><a href="/proposeRef">Propose a new REF</a></h3>
-        <h3><a href="/viewRefs">View or Search Refs</a></h3>
-        <h3><a href="/viewPersonalRefCollection">View Bib</a></h3>
+        <h3><a href="/viewBibs">View Public and Published Bibs or create a Bib</a></h3>
+        <h3><a href="/viewRefs">View or search Refs / Add Refs to Your Bibs</a></h3>
+        <h3><a href="/modifyUsersBibsIndex">View / Update My Bibs</a></h3>
 
     </main>
 
